content/_generated-doc/3.0/config/quarkus-container-image-buildpack.adoc

:summaryTableId: quarkus-container-image-buildpack
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-container-image-buildpack_configuration]]link:#quarkus-container-image-buildpack_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.jvm-builder-image]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.jvm-builder-image[quarkus.buildpack.jvm-builder-image]`

[.description]
--
The buildpacks builder image to use when building the project in jvm mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_JVM_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_JVM_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.native-builder-image]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.native-builder-image[quarkus.buildpack.native-builder-image]`

[.description]
--
The buildpacks builder image to use when building the project in jvm mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_NATIVE_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_NATIVE_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.run-image]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.run-image[quarkus.buildpack.run-image]`

[.description]
--
The buildpacks run image to use when building the project When not supplied, the run image is determined by the builder image.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_RUN_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_RUN_IMAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.pull-timeout-seconds]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.pull-timeout-seconds[quarkus.buildpack.pull-timeout-seconds]`

[.description]
--
Max pull timeout for builder/run images, in seconds

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PULL_TIMEOUT_SECONDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PULL_TIMEOUT_SECONDS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`300`


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.docker-host]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.docker-host[quarkus.buildpack.docker-host]`

[.description]
--
DOCKER_HOST value to use. If not set, the env var DOCKER_HOST is used, if that is not set the value `unix:///var/run/docker.sock' (or 'npipe:///./pipe/docker_engine' for windows) is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_DOCKER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_DOCKER_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.log-level]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.log-level[quarkus.buildpack.log-level]`

[.description]
--
Log level to use.. Defaults to 'info'

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_LOG_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_LOG_LEVEL+++`
endif::add-copy-button-to-env-var[]
--|string 
|`info`


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.base-registry-username]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.base-registry-username[quarkus.buildpack.base-registry-username]`

[.description]
--
The username to use to authenticate with the registry used to pull the base JVM image

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_BASE_REGISTRY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_BASE_REGISTRY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.base-registry-password]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.base-registry-password[quarkus.buildpack.base-registry-password]`

[.description]
--
The password to use to authenticate with the registry used to pull the base JVM image

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_BASE_REGISTRY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_BASE_REGISTRY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus.buildpack.builder-env-builder-env]]`link:#quarkus-container-image-buildpack_quarkus.buildpack.builder-env-builder-env[quarkus.buildpack.builder-env]`

[.description]
--
Environment key/values to pass to buildpacks.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_BUILDER_ENV+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_BUILDER_ENV+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===